--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="n4Y-jY-eL7">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -19,25 +19,81 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4xF-iF-BeM">
-                                <rect key="frame" x="20" y="276" width="560" height="47"/>
+                                <rect key="frame" x="20" y="555" width="560" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="6BP-bf-OKH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VSI-Ye-f7V">
+                                <rect key="frame" x="0.0" y="64" width="600" height="483"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="3w9-kC-I7W" detailTextLabel="ZDb-oU-1eS" style="IBUITableViewCellStyleSubtitle" id="Wdl-N7-EK2">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Wdl-N7-EK2" id="tn8-Kf-10d">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3w9-kC-I7W">
+                                                    <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZDb-oU-1eS">
+                                                    <rect key="frame" x="15" y="25" width="41" height="14"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4xF-iF-BeM" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="D8x-wn-w0f"/>
-                            <constraint firstItem="4xF-iF-BeM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="HQX-I9-NpM"/>
-                            <constraint firstItem="4xF-iF-BeM" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="256" id="d64-Ik-8A4"/>
-                            <constraint firstItem="4xF-iF-BeM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vvN-dy-Ov7"/>
+                            <constraint firstItem="4xF-iF-BeM" firstAttribute="top" secondItem="VSI-Ye-f7V" secondAttribute="bottom" constant="8" symbolic="YES" id="2WK-rr-yia"/>
+                            <constraint firstAttribute="trailing" secondItem="VSI-Ye-f7V" secondAttribute="trailing" id="AnD-Is-3YU"/>
+                            <constraint firstItem="4xF-iF-BeM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="FmM-Zr-TQX"/>
+                            <constraint firstItem="VSI-Ye-f7V" firstAttribute="centerX" secondItem="4xF-iF-BeM" secondAttribute="centerX" id="HLP-Wg-8TM"/>
+                            <constraint firstItem="VSI-Ye-f7V" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="R34-h9-M6k"/>
+                            <constraint firstAttribute="bottom" secondItem="4xF-iF-BeM" secondAttribute="bottom" constant="20" symbolic="YES" id="V94-QW-THK"/>
+                            <constraint firstItem="VSI-Ye-f7V" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="taF-nR-FA2"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="XTE-kB-waP"/>
                     <connections>
                         <outlet property="displayLabel" destination="4xF-iF-BeM" id="4FP-ka-tS9"/>
+                        <outlet property="tableView" destination="VSI-Ye-f7V" id="ISZ-Np-FLc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1110" y="462"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qEc-5b-pMN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="n4Y-jY-eL7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CDJ-tG-22L">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jor-Pf-0pM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XCX-Fh-AsN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="298" y="462"/>
         </scene>
