--- a/MusicVideo/Base.lproj/Main.storyboard
+++ b/MusicVideo/Base.lproj/Main.storyboard
@@ -3,40 +3,66 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Music VideoTVC-->
         <scene sceneID="7WM-8i-cwl">
             <objects>
                 <tableViewController id="LLQ-rX-SqP" customClass="MusicVideoTVC" customModule="MusicVideo" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="jWX-Y4-hmy">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="71" sectionHeaderHeight="28" sectionFooterHeight="28" id="jWX-Y4-hmy">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="Ppn-qA-D3y" detailTextLabel="Q7m-Pj-hcj" style="IBUITableViewCellStyleSubtitle" id="Xcu-cT-oag">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="150" id="Xcu-cT-oag" customClass="MusicVideoTableViewCell" customModule="MusicVideo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xcu-cT-oag" id="hiN-o4-nTx">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ppn-qA-D3y">
-                                            <rect key="frame" x="15" y="5" width="32" height="20"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vzw-yG-WVG">
+                                            <rect key="frame" x="0.0" y="0.0" width="164" height="149"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="164" id="YV1-aq-iq4"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="musicVideoTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCI-UF-jUJ">
+                                            <rect key="frame" x="172" y="29" width="420" height="120"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Q7m-Pj-hcj">
-                                            <rect key="frame" x="15" y="25" width="41" height="14"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJN-GN-Wh2">
+                                            <rect key="frame" x="172" y="0.0" width="34" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="RFq-I5-sPI"/>
+                                                <constraint firstAttribute="width" constant="34" id="amC-ev-on2"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="top" secondItem="SJN-GN-Wh2" secondAttribute="bottom" constant="8" symbolic="YES" id="9mZ-BK-q2J"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="leading" secondItem="hiN-o4-nTx" secondAttribute="leading" id="Ktx-RK-pOl"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="top" secondItem="hiN-o4-nTx" secondAttribute="top" id="Lv8-kj-MBc"/>
+                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="Vzw-yG-WVG" secondAttribute="trailing" constant="8" symbolic="YES" id="MqP-or-fbB"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="bottom" secondItem="RCI-UF-jUJ" secondAttribute="bottom" id="YRB-86-amy"/>
+                                        <constraint firstAttribute="bottom" secondItem="Vzw-yG-WVG" secondAttribute="bottom" id="Zk0-hu-jNT"/>
+                                        <constraint firstItem="SJN-GN-Wh2" firstAttribute="leading" secondItem="RCI-UF-jUJ" secondAttribute="leading" id="fvY-LA-3Z1"/>
+                                        <constraint firstItem="Vzw-yG-WVG" firstAttribute="top" secondItem="SJN-GN-Wh2" secondAttribute="top" id="iqe-1D-fR8"/>
+                                        <constraint firstItem="RCI-UF-jUJ" firstAttribute="trailing" secondItem="hiN-o4-nTx" secondAttribute="trailingMargin" id="ofb-62-oyl"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="musicImage" destination="Vzw-yG-WVG" id="4cG-b2-V9Q"/>
+                                    <outlet property="musicTitle" destination="RCI-UF-jUJ" id="p1D-g2-soU"/>
+                                    <outlet property="rank" destination="SJN-GN-Wh2" id="BBA-t9-9cD"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
